Updated with new Lovable export and removed branding

--- a/index.html
+++ b/index.html
@@ -3,25 +3,14 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>office-suite-revamp</title>
-    <meta name="description" content="Lovable Generated Project" />
-    <meta name="author" content="Lovable" />
+    <title>Cluster Reservation System</title>
 
-    <meta property="og:title" content="office-suite-revamp" />
-    <meta property="og:description" content="Lovable Generated Project" />
-    <meta property="og:type" content="website" />
-    <meta property="og:image" content="https://pub-bb2e103a32db4e198524a2e9ed8f35b4.r2.dev/f9c5fd77-ccd6-41f8-bb89-3d1662ce33ac/id-preview-c0518693--e06175f9-92f6-4872-8545-df221fb53d72.lovable.app-1752822663885.png" />
+    <meta name="description" content="Lovable Project without Branding" />
+    <meta name="author" content="Your Name" />
 
-    <meta name="twitter:card" content="summary_large_image" />
-    <meta name="twitter:site" content="@lovable_dev" />
-    <meta name="twitter:image" content="https://pub-bb2e103a32db4e198524a2e9ed8f35b4.r2.dev/f9c5fd77-ccd6-41f8-bb89-3d1662ce33ac/id-preview-c0518693--e06175f9-92f6-4872-8545-df221fb53d72.lovable.app-1752822663885.png" />
-
-    <!-- SPA bundle and styles -->
-    <script type="module" crossorigin src="index-D7CwMG7c.js"></script>
-    <link rel="stylesheet" crossorigin href="index-Qp4UdwH1.css">
-
-    <!-- Optional analytics script -->
-    <script defer src="https://office-suite-revamp.lovable.app/~flock.js" data-proxy-url="https://office-suite-revamp.lovable.app/~api/analytics"></script>
+    <!-- Load JS + CSS -->
+    <script type="module" crossorigin src="index-CHPSciK0.js"></script>
+    <link rel="stylesheet" crossorigin href="index-N0_yHhTo.css">
   </head>
   <body>
     <div id="root"></div>
