--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <meta name="author" content="Your Name" />
 
     <!-- Load JS + CSS -->
-    <script type="module" crossorigin src="index-CHPSciK0.js"></script>
+    <script type="module" crossorigin src="index-CHP5ciK0.js"></script>
     <link rel="stylesheet" crossorigin href="index-N0_yHhTo.css">
   </head>
   <body>
